# SecureOps-AI

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 001_create_audit_entries.py
data/seed_runbooks/: log4shell_cve_2021_44228.txt  privilege_escalation_response.txt  ransomware_response.txt  sql_injection_response.txt  ssh_brute_force_response.txt
docs/: PROJECT_CONTEXT.md  models.md
docs/M1-scaffold/: architecture.md  system-design.md
docs/M10-workers/: architecture.md  system-design.md
docs/M2-schema-factory/: architecture.md  system-design.md
docs/M3-ingestion/: architecture.md  system-design.md
docs/M4-rag/: architecture.md  system-design.md
docs/M5-agent-graph/: architecture.md  system-design.md
docs/M6-agent-graph-2/: architecture.md  system-design.md
docs/M7-security/: architecture.md  system-design.md
docs/M8-observability/: architecture.md  system-design.md
docs/M9-api/: architecture.md  system-design.md
infra/: postgres-init.sql  prometheus.yml
src/: __init__.py
src/agents/: __init__.py  grader.py  human_review.py  injection_check.py  remediation.py  reporter.py  retrieval.py  rewriter.py
src/api/: __init__.py  limiter.py  main.py  middleware.py
src/api/routes/: __init__.py  auth.py  events.py  health.py  runbooks.py  threats.py
src/core/: __init__.py  config.py  models_factory.py  schema.py
src/db/: __init__.py  engine.py
src/graph/: __init__.py  builder.py  routers.py
src/ingestion/: __init__.py  normalizer.py  producer.py
src/ingestion/adapters/: __init__.py  base.py  nvd_adapter.py  siem_adapter.py  syslog_adapter.py
src/ingestion/queue/: __init__.py  base.py  factory.py  redis_backend.py
src/observability/: __init__.py  langfuse_setup.py  metrics.py  otel_setup.py
src/rag/: __init__.py  pinecone_store.py  runbook_loader.py
src/security/: __init__.py  audit.py  injection.py  output_filter.py  pii_masker.py  rbac.py  ssrf_guard.py
src/security/guardrails/: __init__.py  base.py  injection.py  output_filter.py  pipeline.py  ssrf_guard.py
src/workers/: __init__.py  batch_ingest.py  consumer.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py  test_graph.py  test_workers.py
tests/unit/: __init__.py  test_adapters.py  test_grader.py  test_injection.py  test_observability.py  test_schema_factory.py
